--- a/app/employee_management_ui/webapp/view/Need.view.xml
+++ b/app/employee_management_ui/webapp/view/Need.view.xml
@@ -8,10 +8,10 @@
 	xmlns:f="sap.f"
 	height="100%">
 
-<ObjectPageLayout id="ObjectPageLayout"
+<ObjectPageLayout id="idNeedDetailsPageOPL"
 		showTitleInHeaderContent="true" class="bgcolorops"
 		upperCaseAnchorBar="false"
-		showFooter="true" headerContentPinned="true" useIconTabBar="true">
+		showFooter="true" headerContentPinned="true" useIconTabBar="true" beforeNavigate="handleFooterVisibility">
 		<headerTitle>
 			<ObjectPageDynamicHeaderTitle>
 				<expandedHeading>
@@ -437,8 +437,9 @@
 			<ObjectPageSection titleUppercase="false" id="Authorization" title="Authorization" class="bgcolorops">
 				<subSections>
 					<ObjectPageSubSection title="Authorization" showTitle="false">
-						<blocks>	
-							<m:HBox>
+						<blocks>
+							<info:Authorizations />
+							<!-- <m:HBox>
 					 			<m:HBox width="200px" class="AuthorizationList" alignItems="Center" alignContent="Center" justifyContent="Center">						
 									<m:VBox>
 										<m:Button icon="sap-icon://add" class="buttonSize" type="Transparent" press="onAddAuthority" iconDensityAware="false"/>
@@ -483,7 +484,8 @@
 										</m:HBox>
 									</m:VBox>
 								</m:HBox>
-							</m:HBox>
+							</m:HBox> -->
+
 						</blocks>
 					</ObjectPageSubSection>
 				</subSections>
@@ -522,7 +524,7 @@
 		<footer>
 			<m:Toolbar >
 				<m:ToolbarSpacer />
-				<m:Button text="Edit Need" icon="sap-icon://edit" type="Success" press="onEditNeedPress"/>
+				<m:Button text="Save" icon="sap-icon://sys-enter-2" type="Success" press="onEditNeedPress"/>
 			</m:Toolbar>
 		</footer>
 	</ObjectPageLayout>
