--- a/app/employee_management_ui/webapp/css/style.css
+++ b/app/employee_management_ui/webapp/css/style.css
@@ -81,6 +81,7 @@
 .sCss_mm .sapUiSeparator {
     border-bottom: .0625rem solid #e5e5e5;
     background-color: #fff;
+    padding-left: 10px;
 }
 
 .sCss_mm .sapUiLeadCaseButton .sapMBtnCustomIcon {
